...
                        <connections>
                            <outlet property="dataSource" destination="tQq-N5-MpI" id="5G9-4Q-zo1"/>
                            <outlet property="delegate" destination="tQq-N5-MpI" id="GLf-vi-o6C"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" id="77c-3y-BTZ">
                        <barButtonItem key="leftBarButtonItem" title="Item" id="yov-h1-lHm">
                            <color key="tintColor" name="text_black_bluewhite"/>
                            <connections>
                                <action selector="addFavouriteTapped:" destination="tQq-N5-MpI" id="oPD-kO-Lah"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="LkO-0Y-gCZ">
...
            <point key="canvasLocation" x="4569.2307692307695" y="-95.260663507109001"/>
        </scene>
        <!--Weather-->
        <scene sceneID="lFs-wQ-H26">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cFH-qv-8DW" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Weather" image="weatherEmpty" selectedImage="weatherFilled" id="uxc-yz-k1G"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9YP-4V-0Mt">
                        <rect key="frame" x="0.0" y="44" width="390" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
            <objects>
                <viewController id="N77-Oh-WaL" customClass="AuthorizationController" customModule="WeatherApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="2kg-j7-cnv">
                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZQt-v8-CBo">
                                <rect key="frame" x="16" y="204" width="358" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="zBa-Qh-Vze"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M0z-Zd-So1">
                                <rect key="frame" x="16" y="258" width="358" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="34" id="lBx-1b-4V3"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YrM-h0-LvX">
                                <rect key="frame" x="16" y="308" width="358" height="35"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="fid-Yq-Awc"/>
                                </constraints>
                                <state key="normal" title="Login">
                                    <color key="titleColor" name="text_black_bluewhite"/>
                                </state>
                                <connections>
                                    <action selector="loginTapped:" destination="N77-Oh-WaL" eventType="touchUpInside" id="ikP-H9-7rG"/>
                                </connections>
                            </button>
...
            <point key="canvasLocation" x="2912.3076923076924" y="229.62085308056871"/>
        </scene>
        <!--Favourite-->
        <scene sceneID="Fcn-5Y-VKq">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wkO-Fg-CaX" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Favourite" image="favouriteEmpty" selectedImage="favouriteFilled" id="97p-L6-If4"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="dxf-Sb-kdg">
                        <rect key="frame" x="0.0" y="44" width="390" height="96"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
