...
        navigationController?.pushViewController(chooseCityVC, animated: true)
    }
    
    @IBAction func addFavouriteTapped(_ sender: Any) {
        if currentCity != nil && temperature != nil && weatherStatus != nil {
            let action1 = UIAlertAction(title: "Отмена", style: .default)
            let action2 = UIAlertAction(title: "Сохранить", style: .default) { (_) in
                
                CoreDataManager.shared.saveWeather(weatherTemp: self.temperature, weatherStatus: self.weatherStatus, city: self.currentCity)
                print(CoreDataManager.shared.getSavedWeathers())
                print()
            }
            presentAlert(title: "Сохранение погоды", message: "Вы хотите сохранить погоду в избранной категории?", actions: [action1, action2])
        } else {
            presentAlert(title: "Ошибка погоды", message: "Возможно у вас нет интернета. Поэтому мы не можем показать Вам текущую погоду", actions: [UIAlertAction(title: "Хорошо", style: .default, handler: nil)])
        }
    }
    
    
...
